Client is sharded but rooms are not

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,15 +1,29 @@
+chat {
+  http {
+    port = ${HTTP_PORT}
+  }
+}
+
 akka {
   actor {
     provider = "cluster"
+	serialization-bindings {
+	  "dev.matiaspan.actors.CborSerializable" = jackson-cbor
+	}
   }
   remote.artery {
     canonical {
       hostname = "127.0.0.1"
       port = 2551
+	  port = ${?PORT}
     }
   }
 
   cluster {
+    seed-nodes = [
+      "akka://chat@127.0.0.1:2551",
+      "akka://chat@127.0.0.1:2552"]
+
     downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
   }
 }
