Added cluster sharding

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,13 @@ chat {
 }
 
 akka {
+  loglevel = "INFO"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   actor {
+    debug {
+      receive = on
+    }
     provider = "cluster"
 	serialization-bindings {
 	  "dev.matiaspan.actors.CborSerializable" = jackson-cbor
