--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -17,19 +17,21 @@ akka {
 	  "dev.matiaspan.actors.CborSerializable" = jackson-cbor
 	}
   }
-  remote.artery {
-    canonical {
-      hostname = "127.0.0.1"
-      port = 2551
-	  port = ${?PORT}
-    }
-  }
 
   cluster {
-    seed-nodes = [
-      "akka://chat@127.0.0.1:2551",
-      "akka://chat@127.0.0.1:2552"]
+    shutdown-after-unsuccessful-join-seed-nodes = 60s
 
     downing-provider-class = "akka.cluster.sbr.SplitBrainResolverProvider"
+  }
+
+  coordinated-shutdown.exit-jvm = on
+}
+
+akka.management {
+  cluster.bootstrap {
+    contact-point-discovery {
+      discovery-method = kubernetes-api
+	  service-name = "clusterchat"
+    }
   }
 }
