--- a/k8s/spec.yaml
+++ b/k8s/spec.yaml
@@ -52,10 +52,10 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app.kubernetes.io/name: clusterchat
+    app: clusterchat
   ports:
-    - port: 8081
-      targetPort: 8081
+    - port: 8080
+      targetPort: 8080
       nodePort: 32000
 ---
 kind: Role
