--- a/k8s/kind-cluster.yaml
+++ b/k8s/kind-cluster.yaml
@@ -3,13 +3,12 @@ apiVersion: kind.x-k8s.io/v1alpha4
 name: cluster-chat
 nodes:
 - role: control-plane
-  # port forward 80 on the host to 80 on this node
   extraPortMappings:
+  - containerPort: 32500
+    hostPort: 8558
+    listenAddress: "127.0.0.1"
+    protocol: TCP
   - containerPort: 32000
     hostPort: 8080
-    # optional: set the bind address on the host
-    # 0.0.0.0 is the current default
     listenAddress: "127.0.0.1"
-    # optional: set the protocol to one of TCP, UDP, SCTP.
-    # TCP is the default
     protocol: TCP
