--- a/k8s/spec.yaml
+++ b/k8s/spec.yaml
@@ -13,7 +13,7 @@ metadata:
   name: clusterchat
   namespace: clusterchat
 spec:
-  replicas: 3
+  replicas: 4
   selector:
     matchLabels:
       app: clusterchat
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: clusterchat
-        image: clusterchat:0.0.1
+        image: clusterchat:0.0.2
         imagePullPolicy: Never
         env:
           - name: HTTP_PORT
@@ -64,6 +64,20 @@ spec:
     - port: 8080
       targetPort: 8080
       nodePort: 32000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mgmt
+  namespace: clusterchat
+spec:
+  type: NodePort
+  selector:
+    app: clusterchat
+  ports:
+    - port: 8558
+      targetPort: 8558
+      nodePort: 32500
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
