--- a/src/main/resources/local.conf
+++ b/src/main/resources/local.conf
@@ -18,6 +18,14 @@ akka {
 	}
   }
 
+  remote.artery {
+    canonical {
+      hostname = "127.0.0.1"
+      port = 2551
+	  port = ${?PORT}
+    }
+  }
+
   cluster {
     shutdown-after-unsuccessful-join-seed-nodes = 60s
 
@@ -27,11 +35,9 @@ akka {
   coordinated-shutdown.exit-jvm = on
 }
 
-akka.management {
-  cluster.bootstrap {
-    contact-point-discovery {
-      discovery-method = kubernetes-api
-	  service-name = "orders"
-    }
-  }
-}
+akka.management.http.enabled = false
+akka.management.cluster.bootstrap.enabled = false
+
+akka.cluster.seed-nodes = [
+  "akka://OrderService@127.0.0.1:2551"
+]
