--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -18,6 +18,22 @@ akka {
 	}
   }
 
+  extensions = [akka.persistence.Persistence]
+
+  persistence {
+    cassandra {
+      journal {
+        keyspace-autocreate = true
+        tables-autocreate = true
+      }
+    }
+
+    journal {
+      plugin = "akka.persistence.cassandra.journal"
+      auto-start-journals = ["akka.persistence.cassandra.journal"]
+    }
+  }
+
   cluster {
     shutdown-after-unsuccessful-join-seed-nodes = 60s
 
@@ -37,3 +53,9 @@ akka.management {
 }
 
 akka.rollingupdate.kubernetes.pod-name = ${KUBERNETES_POD_NAME}
+
+datastax-java-driver {
+  advanced.reconnect-on-init = true
+  basic.contact-points = ["cassandra.orders.svc.cluster.local:9042"]
+  basic.load-balancing-policy.local-datacenter = "datacenter1"
+}
