--- a/k8s/spec.yaml
+++ b/k8s/spec.yaml
@@ -5,6 +5,43 @@ metadata:
   labels:
     name: orders
 ---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: cassandra
+  namespace: orders
+  labels:
+    app: cassandra
+spec:
+  containers:
+  - name: cassandra
+    image: cassandra:latest
+    ports:
+      - name: cql
+        containerPort: 9042
+      - name: intra
+        containerPort: 7000
+      - name: tls-intra
+        containerPort: 7001
+      - name: jmx
+        containerPort: 7199
+      - name: thrift
+        containerPort: 9160
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cassandra
+  namespace: orders
+spec:
+  type: NodePort
+  selector:
+    app: cassandra
+  ports:
+    - port: 9042
+      targetPort: 9042
+      nodePort: 32600
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -13,7 +50,7 @@ metadata:
   name: orders
   namespace: orders
 spec:
-  replicas: 8
+  replicas: 3
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -29,7 +66,7 @@ spec:
     spec:
       containers:
       - name: orders
-        image: orders:0.0.7-nopdc
+        image: orders:0.0.11-persistence
         imagePullPolicy: Never
         env:
           - name: HTTP_PORT
